src/asmjit/parsers/elan/ElanParser.py
# Generated from compiler/grammar/ElanParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ElanParser ( Parser ):

    grammarFileName = "ElanParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':='", "'<='", "'>='", "'<>'", "'='", 
                     "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", 
                     "'['", "']'", "','", "';'", "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "PROC", "ENDPROC", "END", "OP", "ENDOP", 
                      "TYPE", "STRUCT", "ROW", "OF", "INT", "REAL", "TEXT", 
                      "BOOL", "CHAR", "VOID", "VAR", "CONST", "LET", "IF", 
                      "THEN", "ELIF", "ELSE", "FI", "ENDIF", "WHILE", "UNTIL", 
                      "FOR", "FROM", "UPTO", "DOWNTO", "REP", "REPEAT", 
                      "ENDREP", "ENDREPEAT", "LEAVE", "WITH", "TRUE", "FALSE", 
                      "NIL", "AND", "OR", "XOR", "NOT", "DIV", "MOD", "PACKET", 
                      "ENDPACKET", "USE", "ASSIGN", "LE", "GE", "NE", "EQ", 
                      "LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "COMMA", "SEMI", "COLON", 
                      "DOT", "REAL_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", 
                      "CHAR_LITERAL", "IDENTIFIER", "COMMENT_PAREN", "COMMENT_BRACE", 
                      "LINE_COMMENT", "WS", "EXPONENT", "DIGIT", "LETTER" ]

    RULE_sourceFile = 0
    RULE_topLevelElement = 1
    RULE_refinement = 2
    RULE_refinementName = 3
    RULE_procedureDeclaration = 4
    RULE_procedureEnd = 5
    RULE_procedureBody = 6
    RULE_formalParameterList = 7
    RULE_formalParameterGroup = 8
    RULE_parameterAccess = 9
    RULE_resultType = 10
    RULE_packetDeclaration = 11
    RULE_packetEnd = 12
    RULE_typeDeclaration = 13
    RULE_typeSpec = 14
    RULE_primitiveType = 15
    RULE_structType = 16
    RULE_structField = 17
    RULE_rowType = 18
    RULE_rowBounds = 19
    RULE_typeName = 20
    RULE_letDeclaration = 21
    RULE_objectDeclaration = 22
    RULE_objectDeclarator = 23
    RULE_objectAccess = 24
    RULE_identifierInitList = 25
    RULE_identifierInitializer = 26
    RULE_identifierList = 27
    RULE_declarationOrStatement = 28
    RULE_paragraph = 29
    RULE_statement = 30
    RULE_assignmentStatement = 31
    RULE_procedureCallStatement = 32
    RULE_expressionStatement = 33
    RULE_ifStatement = 34
    RULE_elifPart = 35
    RULE_elsePart = 36
    RULE_ifEnd = 37
    RULE_whileStatement = 38
    RULE_repeatUntilStatement = 39
    RULE_loopStatement = 40
    RULE_forStatement = 41
    RULE_forDirection = 42
    RULE_repeatKeyword = 43
    RULE_repeatEnd = 44
    RULE_leaveStatement = 45
    RULE_expression = 46
    RULE_logicalOrExpression = 47
    RULE_logicalXorExpression = 48
    RULE_logicalAndExpression = 49
    RULE_equalityExpression = 50
    RULE_relationalExpression = 51
    RULE_additiveExpression = 52
    RULE_multiplicativeExpression = 53
    RULE_unaryExpression = 54
    RULE_postfixExpression = 55
    RULE_postfixPart = 56
    RULE_primaryExpression = 57
    RULE_ifExpression = 58
    RULE_actualParameterList = 59
    RULE_expressionList = 60
    RULE_assignable = 61
    RULE_qualifiedName = 62
    RULE_literal = 63

    ruleNames =  [ "sourceFile", "topLevelElement", "refinement", "refinementName", 
                   "procedureDeclaration", "procedureEnd", "procedureBody", 
                   "formalParameterList", "formalParameterGroup", "parameterAccess", 
                   "resultType", "packetDeclaration", "packetEnd", "typeDeclaration", 
                   "typeSpec", "primitiveType", "structType", "structField", 
                   "rowType", "rowBounds", "typeName", "letDeclaration", 
                   "objectDeclaration", "objectDeclarator", "objectAccess", 
                   "identifierInitList", "identifierInitializer", "identifierList", 
                   "declarationOrStatement", "paragraph", "statement", "assignmentStatement", 
                   "procedureCallStatement", "expressionStatement", "ifStatement", 
                   "elifPart", "elsePart", "ifEnd", "whileStatement", "repeatUntilStatement", 
                   "loopStatement", "forStatement", "forDirection", "repeatKeyword", 
                   "repeatEnd", "leaveStatement", "expression", "logicalOrExpression", 
                   "logicalXorExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "postfixExpression", "postfixPart", 
                   "primaryExpression", "ifExpression", "actualParameterList", 
                   "expressionList", "assignable", "qualifiedName", "literal" ]

    EOF = Token.EOF
    PROC=1
    ENDPROC=2
    END=3
    OP=4
    ENDOP=5
    TYPE=6
    STRUCT=7
    ROW=8
    OF=9
    INT=10
    REAL=11
    TEXT=12
    BOOL=13
    CHAR=14
    VOID=15
    VAR=16
    CONST=17
    LET=18
    IF=19
    THEN=20
    ELIF=21
    ELSE=22
    FI=23
    ENDIF=24
    WHILE=25
    UNTIL=26
    FOR=27
    FROM=28
    UPTO=29
    DOWNTO=30
    REP=31
    REPEAT=32
    ENDREP=33
    ENDREPEAT=34
    LEAVE=35
    WITH=36
    TRUE=37
    FALSE=38
    NIL=39
    AND=40
    OR=41
    XOR=42
    NOT=43
    DIV=44
    MOD=45
    PACKET=46
    ENDPACKET=47
    USE=48
    ASSIGN=49
    LE=50
    GE=51
    NE=52
    EQ=53
    LT=54
    GT=55
    PLUS=56
    MINUS=57
    STAR=58
    SLASH=59
    LPAREN=60
    RPAREN=61
    LBRACK=62
    RBRACK=63
    COMMA=64
    SEMI=65
    COLON=66
    DOT=67
    REAL_LITERAL=68
    INTEGER_LITERAL=69
    STRING_LITERAL=70
    CHAR_LITERAL=71
    IDENTIFIER=72
    COMMENT_PAREN=73
    COMMENT_BRACE=74
    LINE_COMMENT=75
    WS=76
    EXPONENT=77
    DIGIT=78
    LETTER=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ElanParser.EOF, 0)

        def topLevelElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ElanParser.TopLevelElementContext)
            else:
                return self.getTypedRuleContext(ElanParser.TopLevelElementContext,i)


        def getRuleIndex(self):
            return ElanParser.RULE_sourceFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceFile" ):
                listener.enterSourceFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceFile" ):
                listener.exitSourceFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourceFile" ):
                return visitor.visitSourceFile(self)
            else:
                return visitor.visitChildren(self)




    def sourceFile(self):

        localctx = ElanParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1369174456211930178) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & 31) != 0):
                self.state = 128
                self.topLevelElement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(ElanParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def refinement(self):
            return self.getTypedRuleContext(ElanParser.RefinementContext,0)


        def procedureDeclaration(self):
            return self.getTypedRuleContext(ElanParser.ProcedureDeclarationContext,0)


        def typeDeclaration(self):
            return self.getTypedRuleContext(ElanParser.TypeDeclarationContext,0)


        def letDeclaration(self):
            return self.getTypedRuleContext(ElanParser.LetDeclarationContext,0)


        def packetDeclaration(self):
            return self.getTypedRuleContext(ElanParser.PacketDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(ElanParser.StatementContext,0)


        def SEMI(self):
            return self.getToken(ElanParser.SEMI, 0)

        def getRuleIndex(self):
            return ElanParser.RULE_topLevelElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelElement" ):
                listener.enterTopLevelElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelElement" ):
                listener.exitTopLevelElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelElement" ):
                return visitor.visitTopLevelElement(self)
            else:
                return visitor.visitChildren(self)




    def topLevelElement(self):

        localctx = ElanParser.TopLevelElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelElement)
        self._la = 0 # Token type
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.refinement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.procedureDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.typeDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.letDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.packetDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.statement()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==65:
                    self.state = 142
                    self.match(ElanParser.SEMI)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RefinementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def refinementName(self):
            return self.getTypedRuleContext(ElanParser.RefinementNameContext,0)


        def COLON(self):
            return self.getToken(ElanParser.COLON, 0)

        def paragraph(self):
            return self.getTypedRuleContext(ElanParser.ParagraphContext,0)


        def DOT(self):
            return self.getToken(ElanParser.DOT, 0)

        def getRuleIndex(self):
            return ElanParser.RULE_refinement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRefinement" ):
                listener.enterRefinement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRefinement" ):
                listener.exitRefinement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRefinement" ):
                return visitor.visitRefinement(self)
            else:
                return visitor.visitChildren(self)




    def refinement(self):

        localctx = ElanParser.RefinementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_refinement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.refinementName()
            self.state = 148
            self.match(ElanParser.COLON)
            self.state = 149
            self.paragraph()
            self.state = 150
            self.match(ElanParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RefinementNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ElanParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ElanParser.RULE_refinementName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRefinementName" ):
                listener.enterRefinementName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRefinementName" ):
                listener.exitRefinementName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRefinementName" ):
                return visitor.visitRefinementName(self)
            else:
                return visitor.visitChildren(self)




    def refinementName(self):

        localctx = ElanParser.RefinementNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_refinementName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(ElanParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC(self):
            return self.getToken(ElanParser.PROC, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ElanParser.IDENTIFIER)
            else:
                return self.getToken(ElanParser.IDENTIFIER, i)

        def procedureBody(self):
            return self.getTypedRuleContext(ElanParser.ProcedureBodyContext,0)


        def procedureEnd(self):
            return self.getTypedRuleContext(ElanParser.ProcedureEndContext,0)


        def resultType(self):
            return self.getTypedRuleContext(ElanParser.ResultTypeContext,0)


        def formalParameterList(self):
            return self.getTypedRuleContext(ElanParser.FormalParameterListContext,0)


        def COLON(self):
            return self.getToken(ElanParser.COLON, 0)

        def SEMI(self):
            return self.getToken(ElanParser.SEMI, 0)

        def getRuleIndex(self):
            return ElanParser.RULE_procedureDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureDeclaration" ):
                listener.enterProcedureDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureDeclaration" ):
                listener.exitProcedureDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDeclaration" ):
                return visitor.visitProcedureDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def procedureDeclaration(self):

        localctx = ElanParser.ProcedureDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procedureDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 10)) & ~0x3f) == 0 and ((1 << (_la - 10)) & 4611686018427387967) != 0):
                self.state = 154
                self.resultType()


            self.state = 157
            self.match(ElanParser.PROC)
            self.state = 158
            self.match(ElanParser.IDENTIFIER)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 159
                self.formalParameterList()


            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==66:
                self.state = 162
                self.match(ElanParser.COLON)


            self.state = 165
            self.procedureBody()
            self.state = 166
            self.procedureEnd()
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 167
                self.match(ElanParser.IDENTIFIER)


            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==65:
                self.state = 170
                self.match(ElanParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureEndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDPROC(self):
            return self.getToken(ElanParser.ENDPROC, 0)

        def END(self):
            return self.getToken(ElanParser.END, 0)

        def PROC(self):
            return self.getToken(ElanParser.PROC, 0)

        def getRuleIndex(self):
            return ElanParser.RULE_procedureEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureEnd" ):
                listener.enterProcedureEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureEnd" ):
                listener.exitProcedureEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureEnd" ):
                return visitor.visitProcedureEnd(self)
            else:
                return visitor.visitChildren(self)




    def procedureEnd(self):

        localctx = ElanParser.ProcedureEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_procedureEnd)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(ElanParser.ENDPROC)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(ElanParser.END)
                self.state = 175
                self.match(ElanParser.PROC)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationOrStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ElanParser.DeclarationOrStatementContext)
            else:
                return self.getTypedRuleContext(ElanParser.DeclarationOrStatementContext,i)


        def getRuleIndex(self):
            return ElanParser.RULE_procedureBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureBody" ):
                listener.enterProcedureBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureBody" ):
                listener.exitProcedureBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureBody" ):
                return visitor.visitProcedureBody(self)
            else:
                return visitor.visitChildren(self)




    def procedureBody(self):

        localctx = ElanParser.ProcedureBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procedureBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1369104087467752514) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & 31) != 0):
                self.state = 178
                self.declarationOrStatement()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ElanParser.LPAREN, 0)

        def formalParameterGroup(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ElanParser.FormalParameterGroupContext)
            else:
                return self.getTypedRuleContext(ElanParser.FormalParameterGroupContext,i)


        def RPAREN(self):
            return self.getToken(ElanParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ElanParser.COMMA)
            else:
                return self.getToken(ElanParser.COMMA, i)

        def getRuleIndex(self):
            return ElanParser.RULE_formalParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterList" ):
                listener.enterFormalParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterList" ):
                listener.exitFormalParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameterList" ):
                return visitor.visitFormalParameterList(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterList(self):

        localctx = ElanParser.FormalParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_formalParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(ElanParser.LPAREN)
            self.state = 185
            self.formalParameterGroup()
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==64:
                self.state = 186
                self.match(ElanParser.COMMA)
                self.state = 187
                self.formalParameterGroup()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 193
            self.match(ElanParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(ElanParser.TypeNameContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(ElanParser.IdentifierListContext,0)


        def parameterAccess(self):
            return self.getTypedRuleContext(ElanParser.ParameterAccessContext,0)


        def getRuleIndex(self):
            return ElanParser.RULE_formalParameterGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterGroup" ):
                listener.enterFormalParameterGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterGroup" ):
                listener.exitFormalParameterGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameterGroup" ):
                return visitor.visitFormalParameterGroup(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterGroup(self):

        localctx = ElanParser.FormalParameterGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_formalParameterGroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.typeName()
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16 or _la==17:
                self.state = 196
                self.parameterAccess()


            self.state = 199
            self.identifierList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterAccessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ElanParser.VAR, 0)

        def CONST(self):
            return self.getToken(ElanParser.CONST, 0)

        def getRuleIndex(self):
            return ElanParser.RULE_parameterAccess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterAccess" ):
                listener.enterParameterAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterAccess" ):
                listener.exitParameterAccess(self)
